Fix level on mobile

--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -54,7 +54,12 @@
   // Modifiers
   &.is-mobile
     display: flex
-    & > .level-item
+    .level-left,
+    .level-right
+      display: flex
+    .level-left + .level-right
+      margin-top: 0
+    .level-item
       &:not(:last-child)
         margin-bottom: 0
       &:not(.is-narrow)
